# py-sa2schema

./: .envrc  .gitignore  CHANGELOG.md  README.md  build-wheels.sh  build.py  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
sa2schema/: __init__.py  annotations.py  attribute_info.py  compat.py  defs.py  field_filters.py  filter.py  pluck.py  property.py  sa_extract_info.py  stubgen.py  util.py
sa2schema/info/: __init__.py  attribute.py  defs.py  filter.py  property.py  sa_extract_info.py
sa2schema/to/: __init__.py  pydantic.py
sa2schema/to/pydantic/: __init__.py  annotations.py  base_model.py  base_model_recursion.py  getter_dict.py  group.py  models.py  sa_model.py  sa_models.py  sa_pluck.py  schema_tools.py  stubgen.py
tests/: conftest.py  db.py  lib.py  models.py  test_README.py  test_filters.py  test_pluck.py  test_sa_extract_info.py  test_sa_to_pydantic.py  test_stubgen.py
