[tool.poetry]
name = "sa2schema"
version = "0.1.0b3"
description = "Convert SqlAlchemy models to Pydantic"
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-sa2schema'
build = 'build.py'  # PyPi does not accept binary packages

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.5"
pydantic = {version = "^1.5;!=1.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nox = "^2020.5.24"
pydantic = {version = "^1.5;!=1.6", extras = ["email"]}
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12", "cython"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
