[tool.poetry]
name = "sa2schema"
version = "0.1.3"
description = "Convert SqlAlchemy models to Pydantic"
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-sa2schema'
build = 'build.py'  # PyPi does not accept binary packages

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.5"
pydantic = {version = "^1.5;!=1.6", optional = true}

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"
pytest = "^5.2"
pytest-cov = "^2.10.0"
pydantic = {version = "^1.5;!=1.6", extras = ["email"]}

[build-system]
#requires = ["poetry>=0.12", "cython"]
#build-backend = "poetry.masonry.api"
requires = ["poetry-core", "cython", "setuptools", "wheel", "pip"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
